# amr_ws

./: frames_2026-02-24_17.36.46.gv  frames_2026-02-25_19.14.44.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/amr_bringup/share/amr_bringup/: package.sh
install/amr_map_tools/lib/amr_map_tools/: map_loader_node  map_saver_node
install/amr_map_tools/share/amr_map_tools/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/amr_navigation/lib/amr_navigation/: dwa_controller  global_planner_node  pure_pursuit_controller
install/amr_navigation/share/amr_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/apriltag_gazebo_demo/share/apriltag_gazebo_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  (+3 more)
log/: latest_build
src/amr_bringup/: package.xml  setup.py
src/amr_map_tools/: package.xml  setup.cfg  setup.py
src/amr_map_tools/tmp/: my_map.pgm  my_map.yaml
src/amr_navigation/: package.xml  setup.py
src/amr_navigation/amr_navigation/: amr_controller.py  dwa_controller.py  global_planner_node.py  grid_utils.py
src/apriltag_gazebo_demo/: CMakeLists.txt
src/apriltag_gazebo_demo/launch/: tb3_warehouse.launch.py
src/apriltag_gazebo_demo/worlds/: warehouse_with_tags.world
src/ekf_slam/: README.md  package.xml  setup.py
src/ekf_slam_ros/: setup.cfg  setup.py
src/ekf_slam_ros/config/: slam_params.yaml
src/ekf_slam_ros/ekf_slam_ros/: slam_node.py
src/ekf_slam_ros/launch/: tb3_warehouse_slam.launch.py
(+65 files in other folders)
