<?xml version="1.0"?>
<package format="3">
  <name>ekf_slam</name>
  <version>0.0.1</version>
  <description>Pure EKF SLAM implementation</description>
  <maintainer email="nihal@todo.todo">nihal</maintainer>
  <license>MIT</license>

  <exec_depend>python3</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
